@@ -1,3 +1,6 @@
+2021-01-16
+- Add reverse element enterprise ID 29305 for counter values
+
 2020-12-22
 - Code cleanup and boundary checks in option template processing
 
